Call back do diretório raiz .

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               class="max-w-sm rounded bg-white overflow-hidden shadow-lg transform scale-100 hover:scale-105 ease-in-out duration-300"
             >
               <a href="https://portal.ifrn.edu.br/" target="_blank">
-                <img class="w-full" src="/assets/img/logo-ifrn.png" alt="" />
+                <img class="w-full" src="./assets/img/logo-ifrn.png" alt="" />
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Nome do site</div>
                 </div>
@@ -118,7 +118,7 @@
               class="max-w-sm rounded bg-white overflow-hidden shadow-lg transform scale-100 hover:scale-105 ease-in-out duration-300"
             >
               <a href="https://portal.ifrn.edu.br/" target="_blank">
-                <img class="w-full" src="/assets/img/logo-ifrn.png" alt="" />
+                <img class="w-full" src="./assets/img/logo-ifrn.png" alt="" />
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Nome do site</div>
                 </div>
@@ -142,7 +142,7 @@
               class="max-w-sm rounded bg-white overflow-hidden shadow-lg transform scale-100 hover:scale-105 ease-in-out duration-300"
             >
               <a href="https://portal.ifrn.edu.br/" target="_blank">
-                <img class="w-full" src="/assets/img/logo-ifrn.png" alt="" />
+                <img class="w-full" src="./assets/img/logo-ifrn.png" alt="" />
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Nome do site</div>
                 </div>
@@ -166,7 +166,7 @@
               class="max-w-sm rounded bg-white overflow-hidden shadow-lg transform scale-100 hover:scale-105 ease-in-out duration-300"
             >
               <a href="https://portal.ifrn.edu.br/" target="_blank">
-                <img class="w-full" src="/assets/img/logo-ifrn.png" alt="" />
+                <img class="w-full" src="./assets/img/logo-ifrn.png" alt="" />
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Nome do site</div>
                 </div>
@@ -190,7 +190,7 @@
               class="max-w-sm rounded bg-white overflow-hidden shadow-lg transform scale-100 hover:scale-105 ease-in-out duration-300"
             >
               <a href="https://portal.ifrn.edu.br/" target="_blank">
-                <img class="w-full" src="/assets/img/logo-ifrn.png" alt="" />
+                <img class="w-full" src="./assets/img/logo-ifrn.png" alt="" />
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Nome do site</div>
                 </div>
@@ -221,7 +221,7 @@
               class="max-w-sm rounded bg-white overflow-hidden shadow-lg transform scale-100 hover:scale-105 ease-in-out duration-300"
             >
               <a href="https://portal.ifrn.edu.br/" target="_blank">
-                <img class="w-full" src="/assets/img/logo-ifrn.png" alt="" />
+                <img class="w-full" src="./assets/img/logo-ifrn.png" alt="" />
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Nome do site</div>
                 </div>
@@ -245,7 +245,7 @@
               class="max-w-sm rounded bg-white overflow-hidden shadow-lg transform scale-100 hover:scale-105 ease-in-out duration-300"
             >
               <a href="https://portal.ifrn.edu.br/" target="_blank">
-                <img class="w-full" src="/assets/img/logo-ifrn.png" alt="" />
+                <img class="w-full" src="./assets/img/logo-ifrn.png" alt="" />
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Nome do site</div>
                 </div>
@@ -269,7 +269,7 @@
               class="max-w-sm rounded bg-white overflow-hidden shadow-lg transform scale-100 hover:scale-105 ease-in-out duration-300"
             >
               <a href="https://portal.ifrn.edu.br/" target="_blank">
-                <img class="w-full" src="/assets/img/logo-ifrn.png" alt="" />
+                <img class="w-full" src="./assets/img/logo-ifrn.png" alt="" />
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Nome do site</div>
                 </div>
@@ -293,7 +293,7 @@
               class="max-w-sm rounded bg-white overflow-hidden shadow-lg transform scale-100 hover:scale-105 ease-in-out duration-300"
             >
               <a href="https://portal.ifrn.edu.br/" target="_blank">
-                <img class="w-full" src="/assets/img/logo-ifrn.png" alt="" />
+                <img class="w-full" src="./assets/img/logo-ifrn.png" alt="" />
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Nome do site</div>
                 </div>
@@ -317,7 +317,7 @@
               class="max-w-sm rounded bg-white overflow-hidden shadow-lg transform scale-100 hover:scale-105 ease-in-out duration-300"
             >
               <a href="https://portal.ifrn.edu.br/" target="_blank">
-                <img class="w-full" src="/assets/img/logo-ifrn.png" alt="" />
+                <img class="w-full" src="./assets/img/logo-ifrn.png" alt="" />
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Nome do site</div>
                 </div>
