--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>Sites | Projeto de Interface do Usuário</title>
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
   </head>
-  <body class="bg-gray-50">
+  <body class="bg-gray-50 w-full">
     <header class="bg-white text-black p-5 border-b-2 border-slate-200 mb-12">
       <div
         class="container mx-auto flex flex-col justify-between items-center sm:flex-row"
@@ -29,7 +33,7 @@
             <p class="text-gray-500 text-sm">Projeto de Interface do Usuário</p>
           </div>
         </div>
-        <ul class="flex space-x-5">
+        <ul class="flex space-x-5 mt-4 sm:mt-0">
           <li>
             <a
               href="https://www.instagram.com/ifrnoficial/"
@@ -37,7 +41,7 @@
               title="Instagram"
               target="_blank"
             >
-              <span>Instagram</span>
+              <span><i class="fa-brands fa-instagram"></i></span>
             </a>
           </li>
           <li>
@@ -47,7 +51,7 @@
               title="Twitter/X"
               target="_blank"
             >
-              <span>Twitter/X</span>
+              <span><i class="fa-brands fa-x-twitter"></i></span>
             </a>
           </li>
           <li>
@@ -57,7 +61,7 @@
               title="Facebook"
               target="_blank"
             >
-              <span>Facebook</span>
+              <span><i class="fa-brands fa-facebook"></i></span>
             </a>
           </li>
           <li>
@@ -67,7 +71,7 @@
               title="Linkedin"
               target="_blank"
             >
-              <span>Linkedin</span>
+              <span><i class="fa-brands fa-linkedin"></i></span>
             </a>
           </li>
           <li>
@@ -77,7 +81,7 @@
               title="Youtube"
               target="_blank"
             >
-              <span>Youtube</span>
+              <span><i class="fa-brands fa-youtube"></i></span>
             </a>
           </li>
         </ul>
@@ -561,7 +565,7 @@
     <footer
       class="bg-white text-black p-5 border-t-2 border-slate-200 mt-12 text-center"
     >
-      <span class="text-sm"
+      <span class="text-sm text-gray-500"
         >Copyright © 2023 | Instituto Federal de Educação, Ciência e Tecnologia
         do Rio Grande do Norte</span
       >
