Adicionando mais um card

--- a/index.html
+++ b/index.html
@@ -597,6 +597,37 @@
                 </div>
               </a>
             </div>
+            <div
+              class="max-w-sm rounded bg-white overflow-hidden shadow-lg transform scale-100 hover:scale-105 ease-in-out duration-300"
+            >
+              <a
+                href="http://batna.ifrn.edu.br/Info2V/CantinhodoSaber/"
+                target="_blank"
+              >
+                <img
+                  class="h-40 w-full"
+                  src="./assets/img/cantinho-do-saber-logo.png"
+                  alt=""
+                />
+                <div class="px-6 pt-4">
+                  <div class="font-bold text-xl mb-2">Cantinho do Saber</div>
+                </div>
+                <div class="px-6 pb-2">
+                  <span
+                    class="inline-block pr-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+                    >Charlon Fernandes
+                  </span>
+                  <span
+                    class="inline-block pr-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+                    >Evellyn Santana</span
+                  >
+                  <span
+                    class="inline-block pr-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+                    >Laíssa Kérem</span
+                  >
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
