alterações de redirecionamento

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
               class="max-w-sm rounded bg-white overflow-hidden shadow-lg transform scale-100 hover:scale-105 ease-in-out duration-300"
             >
               <a
-                href="http://batna.ifrn.edu.br/Info1V/LittleLife/Little_Life/LittlelLife/Impact/"
+                href="http://batna.ifrn.edu.br/Info1V/Little_Life/Impact/index.html"
                 target="_blank"
               >
                 <img
@@ -413,7 +413,7 @@
               class="max-w-sm rounded bg-white overflow-hidden shadow-lg transform scale-100 hover:scale-105 ease-in-out duration-300"
             >
               <a
-                href="http://batna.ifrn.edu.br/Info2V/geek-review/"
+                href="http://batna.ifrn.edu.br/Info2V/geekreview/"
                 target="_blank"
               >
                 <img
